--- a/FRONT/gatsby-sens-interdits/src/components/globals/Calendar/CalendarOneDay.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/Calendar/CalendarOneDay.css
@@ -8,14 +8,13 @@
   border-left: solid black 1px;
 }
 
-.active {
+.calendar-container .active {
   background-color: red;
   color: white;
 }
 
 .one-day p {
   color: rgb(94, 94, 94);
-
   cursor: pointer;
 }
 
@@ -26,13 +25,6 @@
   cursor: pointer;
 }
 
-.display-block {
-  display: block;
-}
-
-.display-none {
-  display: none;
-}
 .modal {
   position: relative;
   border-left: solid black 1px;
@@ -44,6 +36,7 @@
   color: black;
   padding: 10px;
   transition: 0.5s;
+  display: block;
 }
 .modal h3 {
   margin: 0;
