--- a/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
+++ b/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
@@ -63,5 +63,16 @@ li {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
+}
+
+.container {
+  width: 100%;
+  max-with: 1080px;
+  height: auto;
+  margin: 0 auto;
+}
+
+.flex {
+  display: flex !important
 }
