adding class container on all pages

--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Generique/index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Generique/index.css
@@ -1,11 +1,7 @@
-.global-generique-page {
-  width: 1080px;
-  margin: auto;
-}
 
 .global-generique-page .image-generique-page {
   height: 400px;
-  width: 1080px;
+  max-width:1080px;
   display: flex;
   justify-content: center;
   align-items: center;
