--- a/FRONT/gatsby-sens-interdits/src/components/globals/Carousel/ImageCarousel.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/Carousel/ImageCarousel.css
@@ -10,9 +10,17 @@ div.carousel-loading img {
 }
 
 div.size-adjustment {
-  width: auto;
+  display: flex;
+  width: 100%;
+  margin : auto;
   max-height: calc(100vh - 280px); /*450px*/
 }
+
+div.size-adjustment img{
+  object-fit: cover;
+}
+
+
 
 div.carousel-wrapper {
   position: relative;
