min-height in image carousel

--- a/FRONT/gatsby-sens-interdits/src/components/globals/Carousel/ImageCarousel.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/Carousel/ImageCarousel.css
@@ -12,6 +12,7 @@ div.carousel-loading img {
 div.size-adjustment {
   display: flex;
   width: 100%;
+  min-height: 60vh;
   margin : auto;
   max-height: calc(100vh - 280px); /*450px*/
 }
