--- a/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
@@ -26,10 +26,11 @@
   top: -5px;
 }
 
-.display-tab-sticker .display-tab-title span {
-  max-width: 200px;
+.display-tab-sticker .display-tab-title h2 {
+  max-width: 180px;
   color: white;
-  font-size: 28px;
+  font-size: 30px;
+  text-shadow: 2px 2px 10px black;
 }
 
 /* red effect odd in festival and transmission*/
@@ -96,7 +97,7 @@
     margin: 10px;
     background-color: grey;
   }
-  .display-tab-sticker .display-tab-title span {
+  .display-tab-sticker .display-tab-title h2 {
     font-size: 20px;
   }
 }
