--- a/FRONT/gatsby-sens-interdits/src/components/globals/Carousel/RedTitleCard.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/Carousel/RedTitleCard.css
@@ -6,8 +6,8 @@ div.red {
   align-self: center;
   background-color: #e30613;
   mix-blend-mode: multiply;
-  width: 450px;
-  height: 150px;
+  min-width: 550px;
+  height: 250px;
   margin: 0;
 }
 
@@ -18,13 +18,14 @@ div.image-text {
   z-index: 1;
   top: 300px;
   left: calc(50vw - 225px);
-  width: 450px;
+  width: 550px;
+  height: 250px;
   text-align: center;
 }
 
 div.image-text .title {
   color: #fff;
-  font-size: 32px;
+  font-size: 30px;
   font-weight: 600;
   padding-bottom: 20px;
 }
