--- a/FRONT/gatsby-sens-interdits/src/components/globals/Carousel/RedTitleCard.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/Carousel/RedTitleCard.css
@@ -60,3 +60,12 @@ div.image-text .button {
 .display-none {
   display: none;
 }
+
+@media screen and (max-width: 960px) {
+  div.red{
+    display : none;
+  }
+  div.image-text {
+    display : none
+  }
+}
