--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Generique/index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Generique/index.css
@@ -4,3 +4,8 @@
   width: 1080px;
   margin-top: 50px;
 }
+@media screen and (max-width: 960px) {
+  .container .image-generique-page img {
+    display:none;
+  }
+}
