--- a/FRONT/gatsby-sens-interdits/src/templates/spectacle.css
+++ b/FRONT/gatsby-sens-interdits/src/templates/spectacle.css
@@ -64,6 +64,10 @@ div.red-arrow-spectacle {
   clip-path: polygon(50% 100%, 0 0, 100% 0);
 }
 
+.content-spectacle-page .tab-module {
+  margin-top : 50px;
+}
+
 /* RESPONSIVE */
 @media screen and (max-width: 960px)  {
   .content-spectacle-page {
@@ -87,4 +91,5 @@ div.red-arrow-spectacle {
   .content-spectacle-page .spectacle-infos-content {
     width:90vw;
   }
+
 } 
