--- a/FRONT/gatsby-sens-interdits/src/templates/archiveSpectacle.css
+++ b/FRONT/gatsby-sens-interdits/src/templates/archiveSpectacle.css
@@ -1,67 +1,67 @@
 .global-spectacle-page {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .content-spectacle-page {
-    display: grid;
-    grid-template-columns: 15% 60% 25%;
-    grid-template-rows: 100px repeat(2, minmax(100px, auto));
-    gap: 10px;
-    grid-template-areas:
-      "country-label calendar spectacle-info"
-      "tab-module tab-module spectacle-info"
-      "content content content";
-  }
-  
-  .country-label {
-    grid-area: country-label;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .country-label p {
-    text-transform: uppercase;
-    font-weight: 600;
-    color: #fff;
-    background-color: #e30613;
-    align-self: start;
-    padding: 14px 5px 7px 5px;
-  }
-  
-  .content {
-    grid-area: content;
-    margin-bottom: 42px;
-    position: relative;
-  }
-  
-  .content p.content-title {
-    text-align: center;
-    font-weight: 600;
-    font-size: 24px;
-    align-items: center;
-    margin-bottom: 32px;
-    padding-top: 50px;
-  }
-  
-  .display-mini-tab {
-    display: flex;
-    flex-wrap: wrap;
-    width: 1080px;
-    margin: auto;
-    justify-content: center;
-  }
-  div.red-arrow-spectacle {
-    position: absolute;
-    top: 0;
-    left: calc(50% - 20px);
-    width: 40px;
-    height: 45px;
-    background-color: #e30613;
-    clip-path: polygon(50% 100%, 0 0, 100% 0);
-  }
-  .archive-global-styling p.archive-description {
+  display: flex;
+  flex-direction: column;
+}
+
+.content-spectacle-page {
+  display: grid;
+  grid-template-columns: 15% 60% 25%;
+  grid-template-rows: 100px repeat(2, minmax(100px, auto));
+  gap: 10px;
+  grid-template-areas:
+    "country-label calendar spectacle-info"
+    "tab-module tab-module spectacle-info"
+    "content content content";
+}
+
+.country-label {
+  grid-area: country-label;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+}
+
+.country-label p {
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #fff;
+  background-color: #e30613;
+  align-self: start;
+  padding: 14px 5px 7px 5px;
+}
+
+.content {
+  grid-area: content;
+  margin-bottom: 42px;
+  position: relative;
+}
+
+.content p.content-title {
+  text-align: center;
+  font-weight: 600;
+  font-size: 24px;
+  align-items: center;
+  margin-bottom: 32px;
+  padding-top: 50px;
+}
+
+.display-mini-tab {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1080px;
+  margin: auto;
+  justify-content: center;
+}
+div.red-arrow-spectacle {
+  position: absolute;
+  top: 0;
+  left: calc(50% - 20px);
+  width: 40px;
+  height: 45px;
+  background-color: #e30613;
+  clip-path: polygon(50% 100%, 0 0, 100% 0);
+}
+.archive-global-styling p.archive-description {
   letter-spacing: 1px;
   text-align: justify;
   margin-bottom: 4vh;
@@ -86,6 +86,7 @@
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
   column-gap: 1%;
+  margin-top: 24px;
 }
 
 .archive-transmission-grid-wrapper .mini-tab {
@@ -114,17 +115,32 @@ img.picto-plus {
   height: 38px;
 }
 
+.archive-global-styling {
+  width: 100%;
+  max-width: 1080px;
+  margin: 0 auto;
+}
+
+.image-generique-page img {
+  object-fit: scale-down;
+  height: 400px;
+  width: 1080px;
+  margin-top: 50px;
+}
+
 @media screen and (max-width: 960px) {
   /* ARCHIVES */
-  .archive-transmission-grid-wrapper{
+  .archive-transmission-grid-wrapper {
     display: flex;
     flex-direction: column;
   }
-  .festival-poster-wrapper{
+  .festival-poster-wrapper {
     font-size: 12px;
   }
   .festival-poster-wrapper .festival-title-flex img {
     width: 15px;
   }
+  .image-generique-page img {
+    display: none;
+  }
 }
-  
