--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Programme/FilterTab.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Programme/FilterTab.css
@@ -14,7 +14,9 @@
   margin-right: 10px;
   padding-right: 10px;
   border-right: solid #e30613 1px;
+  cursor: pointer;
 }
+
 
 @media screen and (max-width: 960px) {
   /* FILTERTAB */
