--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
@@ -67,8 +67,10 @@ header {
   border-top: solid #e30613 4px;
   border-left: solid #e30613 1px;
   border-right: solid #e30613 1px;
-  border-radius: 0 0 7px 7px;
+  border-radius: 0 0 5px 5px;
   font-size: 10px;
+  padding: 3px;
+
 }
 
 .newsletter-header a {
