--- a/FRONT/gatsby-sens-interdits/src/components/globals/Carousel/RedTitleCard.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/Carousel/RedTitleCard.css
@@ -38,7 +38,7 @@ div.image-text .country {
   font-size: 18px;
   margin-top:20px;
   margin-left:20px;
-  padding:0;
+  padding: 1px 5px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 
