--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
@@ -1,237 +1,362 @@
 /* HEADER CSS */
 header {
-  grid-area: header;
-  color: white;
-  background-color: #000000;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 160px;
+    grid-area: header;
+    color: white;
+    background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 160px;
 }
 
 .wrapper-header {
-  width: 1080px;
-  margin: 0 auto;
+    width: 100%;
+    max-width: 1080px;
+    margin: 0 auto;
 }
-/* HEADER ROW 1 */
 
 .wrapper-header-row1 {
-  width: 100vw;
-  position: fixed;
-  z-index: 2;
-  background-color: black;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.65);
+    width: 100vw;
+    position: fixed;
+    z-index: 2;
+    background-color: black;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.65);
 }
 
 .header-row1 {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  align-items: center;
-  background-color: black;
-
-  padding: auto;
-  border-radius: 0 0 10px 10px;
-  width: 1080px;
-  margin: auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-items: center;
+    background-color: black;
+    border-radius: 0 0 10px 10px;
+    width: 1080px;
+    margin: auto;
 }
 
 .fr-en {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  width: max-content;
-  margin: 1vw;
-  font-size: 12px;
-  color: white;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: max-content;
+    margin: 1vw;
+    font-size: 12px;
+    color: white;
 }
 
 .fr-en:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .fr-en span {
-  margin-left: 5px;
-  margin-right: 5px;
-  color: #e30613;
+    margin-left: 5px;
+    margin-right: 5px;
+    color: #e30613;
 }
 
 .fr-en p.active-language {
-  background-color: #e30613;
+    background-color: #e30613;
 }
 
 /* BOUTON HIGHLIGHT */
 .highlight {
-  color: #000000;
-  background: white;
-  border-top: solid #e30613 4px;
-  border-left: solid #e30613 1px;
-  border-right: solid #e30613 1px;
-  border-radius: 0 0 5px 5px;
-  font-size: 10px;
-  padding: 3px;
-
+    color: #000000;
+    background: white;
+    border-top: solid #e30613 4px;
+    border-left: solid #e30613 1px;
+    border-right: solid #e30613 1px;
+    border-radius: 0 0 5px 5px;
+    font-size: 10px;
+    padding: 3px;
 }
 
 .newsletter-header a {
-  color: #000000;
+    color: #000000;
 }
 
 .nav-bar {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  padding: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    padding: 0;
 }
+
 .nav-bar li {
-  border-right: solid #e30613 2px;
-  padding: 0 5px;
-  width: max-content;
+    border-right: solid #e30613 2px;
+    padding: 0 5px;
+    width: max-content;
 }
 
 .nav-bar li a {
-  color: white;
+    color: white;
 }
 
 .nav-bar :nth-last-child(1) {
-  border-right: none;
+    border-right: none;
 }
 
 /* button billetterie et programme */
 .billetterie-programme {
-  display: flex;
-  align-items: flex-end;
-  margin-left: 10px;
+    display: flex;
+    align-items: flex-end;
+    margin-left: 10px;
 }
+
 .billetterie-programme a {
-  margin-right: 10px;
+    margin-right: 10px;
 }
 
 /*magnifier search bar*/
 .search-magnifier img {
-  width: 40px;
+    width: 40px;
 }
 
 /* HEADER ROW 2 */
 .header-row2 {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: flex-end;
-  padding-top: 50px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding-top: 50px;
 }
 
 .main-logo {
-  margin-right: 20px;
-  margin-bottom: -20px;
+    margin-right: 20px;
+    margin-bottom: -20px;
 }
 
 .main-logo img {
-  width: auto;
-  height: 110px;
+    width: auto;
+    height: 110px;
 }
 
 .next-festival-date {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-left: 20px;
-  margin-bottom: 30px;
-  font-weight: bold;
-  min-width: 180px;
-  height: 70px;
-  border-left: solid white 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 20px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    min-width: 180px;
+    height: 70px;
+    border-left: solid white 2px;
 }
+
 .next-festival-date,
 p {
-  margin: 0;
+    margin: 0;
 }
+
 .next-festival-date .edition {
-  display: flex;
+    display: flex;
 }
+
 .next-festival-date .edition-text {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
+
 .next-festival-date .edition :nth-child(1) {
-  font-size: 20px;
+    font-size: 20px;
 }
 
 /* edition number */
 .next-festival-date .edition .edition-number {
-  font-size: 40px;
-  margin-bottom: -8px;
+    font-size: 40px;
+    margin-bottom: -8px;
 }
+
 .next-festival-date p span {
-  color: #e30613;
+    color: #e30613;
 }
 
 /* Lyon metropole */
 .next-festival-date .edition-date :nth-child(3) {
-  font-size: 9px;
+    font-size: 9px;
 }
 
 .social-network {
-  display: flex;
-  flex-wrap: nowrap;
-  margin-bottom: 0;
-  flex-grow: 1;
-  padding: 0;
+    display: flex;
+    flex-wrap: nowrap;
+    margin-bottom: 0;
+    flex-grow: 1;
+    padding: 0;
 }
+
 .social-network a {
-  margin-left: 5px;
-  height: 30px;
+    margin-left: 5px;
+    height: 30px;
 }
 
 .header-row2 .social-network {
-  justify-content: flex-end;
-  margin-right: 30px;
+    justify-content: flex-end;
+    margin-right: 30px;
 }
 
 .search-magnifier {
-  cursor: pointer;
+    cursor: pointer;
+}
+
+#hamburger {
+    display: none;
 }
 
 @media screen and (max-width: 960px) {
-  /* HEADER */
-  .header-row2 {
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding-top: 30px;
-    position: absolute;
-    margin: auto;
-  }
-  .header-row2 .social-network {
-    display: none;
-  }
-  .header-row1 {
-    width: 100vw;
-    position: relative;
-    justify-content: center;
-    flex-direction: row;
-  }
-  .wrapper-header-row1 {
-    position: absolute;
-  }
-  .newsletter-header {
-    display: none;
-  }
+    header {
+        height: auto;
+        top: 0;
+        left: 0;
+        z-index: 9998;
+        width: 100%;
+    }
 
-  .nav-bar {
-    position: absolute;
-    left: 0;
-    top: 80px;
-    flex-wrap: wrap;
-    width: fit-content;
-    justify-content: center;
-  }
-  .main-logo {
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-  }
-  .main-logo img {
-    height: 60px;
-  }
+    header.fixed {
+        position: fixed;
+    }
+
+    header * {
+        box-sizing: border-box;
+    }
+    #overlay-menu * {
+        box-sizing: border-box;
+    }
+
+    header > div {
+        padding: 0 10px;
+        width: 100%;
+
+    }
+
+    header nav {
+        display: none;
+    }
+
+    .wrapper-header-row1 {
+        order: 2;
+        position: relative;
+        width: 100%;
+    }
+
+    .wrapper-header {
+        order: 1;
+    }
+
+    .header-row2 {
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding-top: 10px;
+        position: relative;
+        margin: 0;
+    }
+
+    .header-row2 .social-network {
+        display: none;
+    }
+
+    .header-row1 {
+        width: 100%;
+        position: relative;
+        justify-content: center;
+        flex-direction: row;
+        border-radius: 0;
+        padding: 3px;
+    }
+
+    nav {
+        box-shadow: -4px 0 16px -3px rgba(0,0,0,0.7);
+    }
+
+    .nav-bar {
+        flex-wrap: wrap;
+        width: 100%;
+        padding: 15px;
+    }
+
+    .nav-bar li {
+        display: block;
+        width: 100%;
+        border: 0;
+        margin-bottom: 10px;
+        border-bottom: 1px solid #E30613;
+        padding-bottom: 10px;
+        margin-top: 10px;
+    }
+    .nav-bar li:first-child {
+        margin-top: 0;
+    }
+
+    .nav-bar li:last-child {
+        border: 0;
+    }
+
+    .fr-en {
+        font-size: 16px;
+        margin-right: auto;
+    }
+
+    .main-logo {
+        display: flex;
+        justify-content: center;
+        margin: 0;
+    }
+
+    .main-logo img {
+        width: 100%;
+        height: auto;
+    }
+
+
+    .search-magnifier {
+        margin-left: auto;
+        margin-right: 10px;
+    }
+
+    .highlight {
+      font-size: 11px;
+      border: 0;
+      border-top: solid #e30613 4px;
+    }
+
+    #hamburger {
+        width: 30px;
+        height: 35px;
+        display: block;
+        position: relative;
+        left: 0;
+        top: 0;
+        padding-top: 5px;
+        align-self: center;
+    }
+
+    #hamburger span {
+        width: 100%;
+        height: 4px;
+        position: relative;
+        display: block;
+        margin: 0 0 5px;
+        -webkit-border-radius: 2px;
+        border-radius: 2px;
+        -webkit-background-clip: padding-box;
+        background: #fff;
+    }
+
+    .newsletter-header {
+        display: none;
+    }
+
+
+    #overlay-menu nav {
+        width: 100%;
+        max-width: 250px;
+        height: 100vh;
+        z-index: 10000;
+        top: 0;
+        right: 0;
+        position: fixed;
+        background: #1b1b1b;
+        color: #fff;
+        display: flex;
+        flex-direction: column;
+    }
 }
