--- a/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
+++ b/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
@@ -10,6 +10,10 @@
 }
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rambla:wght@400;700&display=swap');
+
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   padding: 0;
@@ -17,6 +21,13 @@ body {
   font-family: 'Quicksand', "gothamLight", arial, sans-serif;
   font-size: 16px;
   overflow-x: hidden;
+}
+
+body.prevent-scroll {
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .body {
