--- a/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
+++ b/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
@@ -2,12 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Rambla:wght@400;700&display=swap');
 
 @font-face {
-  font-family: "gothamBold";
+  font-family: 'gothamBold', Helvetica, sans-serif;
   src: url(fonts/gothamBold/gothamBold.eot) format("eot"),
     url(fonts/gothamBold/gothamBold.ttf) format("tff"),
     url(fonts/gothamBold/gothamBold.woff) format("woff"),
     url(fonts/gothamBold/gothamBold.woff2) format("woff2");
-  font-family: "gothamLight";
+}
+
+@font-face {
+  font-family: "gothamLight", Helvetica, sans-serif;
   src: url(fonts/GothamLightRegular.otf) format("otf")
 }
 * {
@@ -33,7 +36,7 @@ body.prevent-scroll {
   display: grid;
   grid-template-columns: 20% 60% 20%;
   grid-template-rows: minmax(200px, auto) 1fr minmax(300px, auto);
-  gap: 0px 0px;
+  gap: 0;
   grid-template-areas:
     "header header header"
     "main main main"
@@ -114,9 +117,9 @@ div.overlay {
 }
 
 .bold-font {
-  font-family: 'Rambla', arial;
+  font-family: 'Rambla', Arial, sans-serif;
 }
 
 h1, h2 {
-  font-family: 'Rambla', 'Quicksand', arial;
+  font-family: 'Rambla', 'Quicksand', Arial, sans-serif;
 }
