--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Homepage/Index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Homepage/Index.css
@@ -15,6 +15,11 @@
   flex-wrap: wrap;
   justify-content: center;
   max-width: 1080px;
+  width: 100%;
+  padding: 40px 0;
 }
 
+@media screen and (max-width: 960px) {
+
+}
 
