--- a/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
@@ -53,52 +53,11 @@
   text-shadow: 2px 2px 10px black;
 }
 
-/* red effect odd in festival and transmission*/
-#festival-menu .display-tab-sticker:nth-last-child(odd) .red-wrapper {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  mix-blend-mode: multiply;
-  background-color: #e30613;
-  z-index: 1;
-}
-
-.transmission-grid-layout
-  .display-tab-sticker:nth-last-child(odd)
-  .red-wrapper {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  mix-blend-mode: multiply;
-  background-color: #e30613;
-  z-index: 1;
-}
-
-/* red effect on homepage and diffusion*/
-.content-homepage .display-tab-sticker:nth-last-child(2) .red-wrapper {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  mix-blend-mode: multiply;
-  background-color: #e30613;
-  z-index: 1;
-}
-.content-homepage .display-tab-sticker:nth-last-child(3) .red-wrapper {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  mix-blend-mode: multiply;
-  background-color: #e30613;
-  z-index: 1;
-}
-.global-diffusion .display-tab-sticker:nth-last-child(2) .red-wrapper {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  mix-blend-mode: multiply;
-  background-color: #e30613;
-  z-index: 1;
-}
+#festival-menu .display-tab-sticker:nth-last-child(odd) .red-wrapper,
+.transmission-grid-layout .display-tab-sticker:nth-last-child(odd) .red-wrapper,
+.global-diffusion .display-tab-sticker:nth-last-child(2) .red-wrapper,
+.content-homepage .display-tab-sticker:nth-last-child(2) .red-wrapper,
+.content-homepage .display-tab-sticker:nth-last-child(3) .red-wrapper,
 .global-diffusion .display-tab-sticker:nth-last-child(3) .red-wrapper {
   position: absolute;
   width: 100%;
@@ -129,6 +88,24 @@
   .display-tab-sticker .img-homepage {
     object-fit: cover;
   }
+
+  .content-homepage .display-tab-sticker:nth-child(2) .red-wrapper,
+  .content-homepage .display-tab-sticker:nth-child(4) .red-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    mix-blend-mode: multiply;
+    background-color: #e30613;
+    z-index: 1;
+  }
+
+  .content-homepage .display-tab-sticker:nth-child(1) .red-wrapper,
+  .content-homepage .display-tab-sticker:nth-child(3) .red-wrapper {
+    display: none;
+  }
+
+
+
 }
 
 
