--- a/FRONT/gatsby-sens-interdits/src/templates/article.css
+++ b/FRONT/gatsby-sens-interdits/src/templates/article.css
@@ -11,6 +11,8 @@
   }
 
   .article-date{
+    margin-top : 30px;
+    margin-bottom: 20px;
     color: #E30613;
   }
 
@@ -22,6 +24,8 @@
     justify-self: center;
     max-width: 80%;
     max-height: 50%;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
 
