--- a/FRONT/gatsby-sens-interdits/src/components/globals/Carousel/RedTitleCard.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/Carousel/RedTitleCard.css
@@ -1,6 +1,6 @@
 div.red {
   position: absolute;
-  top: 30%;
+  top: 50%;
   left: calc(50vw - 225px);
   z-index: 1;
   align-self: center;
@@ -9,6 +9,7 @@ div.red {
   min-width: 550px;
   height: 250px;
   margin: 0;
+  margin-top: -125px;
 }
 
 div.image-text {
@@ -16,20 +17,23 @@ div.image-text {
   display: flex;
   flex-direction: column;
   z-index: 1;
-  top: 30%;
+  top: 50%;
   left: calc(50vw - 225px);
   width: 550px;
   height: 250px;
   text-align: center;
+  align-content: center;
+  justify-content: center;
   align-items: center;
-  padding-top: 50px;
+  margin-top: -125px;
 }
 
 div.image-text .title {
   color: #fff;
   font-size: 30px;
   font-weight: 600;
-  padding-bottom: 20px;
+  align-self: center;
+  padding: 0;
 }
 
 div.image-text .country {
@@ -56,7 +60,7 @@ div.image-text .button {
   border-bottom-right-radius: 10px;
   margin-bottom:0;
   width:fit-content;
-  margin-left : 20px;
+  margin-top: 25px;
 }
 
 .display-none {
