--- a/FRONT/gatsby-sens-interdits/src/templates/festival.css
+++ b/FRONT/gatsby-sens-interdits/src/templates/festival.css
@@ -33,6 +33,87 @@
 }
 
 #festival-menu .display-tab-sticker {
-  width: 250px;
-  height: 250px;
+  width: calc(33% - 17px);
+  margin-right: 30px;
+  margin-top: 0;
+}
+#festival-menu .display-tab-sticker:nth-child(6),
+#festival-menu .display-tab-sticker:nth-child(3) {
+  margin-right: 0;
+}
+
+
+#festival-menu .display-tab-sticker:nth-child(4),
+#festival-menu .display-tab-sticker:nth-child(5),
+#festival-menu .display-tab-sticker:nth-child(6) {
+  margin-top: 30px
+}
+
+#festival-menu .display-tab-sticker a > img {
+  width: 155%;
+  align-self: center;
+  transition: all .4s ease-in-out;
+}
+#festival-menu .display-tab-sticker:hover a > img {
+  width: 175%;
+}
+
+@media screen and (max-width: 960px) {
+  #festival-menu .display-tab-sticker {
+    position: relative;
+    width: calc(50% - 20px);
+    height: 285px;
+    margin-right: 40px;
+    background-color: grey;
+    overflow: hidden;
+  }
+
+  #festival-menu .display-tab-sticker:nth-child(4),
+  #festival-menu .display-tab-sticker:nth-child(2) {
+    margin-right: 0;
+  }
+  #festival-menu .display-tab-sticker:nth-child(3) {
+    margin-right: 40px;
+
+  }
+  #festival-menu .display-tab-sticker:nth-child(3) .red-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    mix-blend-mode: multiply;
+    background-color: #e30613;
+    z-index: 1;
+  }
+  #festival-menu .display-tab-sticker:nth-child(4) .red-wrapper {
+    display: none;
+  }
+
+  #festival-menu .display-tab-sticker:nth-child(5),
+  #festival-menu .display-tab-sticker:nth-child(6),
+  #festival-menu .display-tab-sticker:nth-child(4) {
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  #festival-menu .display-tab-sticker {
+    position: relative;
+    width: 100%;
+    margin-bottom: 25px !important;
+  }
+
+  #festival-menu .display-tab-sticker {margin-right: 0 !important}
+
+  #festival-menu .display-tab-sticker:nth-child(3) .red-wrapper {
+    display: none;
+  }
+  #festival-menu .display-tab-sticker:nth-child(4) .red-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    mix-blend-mode: multiply;
+    background-color: #e30613;
+    z-index: 1;
+    display: block;
+  }
 }
