--- a/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
+++ b/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
@@ -105,12 +105,11 @@ div.overlay {
   max-width: 1080px;
   height: auto;
   margin: 0 auto;
-  padding: 40px 0;
 }
 
 @media screen and (max-width: 960px) {
   .container {
-    padding: 25px 20px;
+    padding: 0 20px;
   }
 }
 
