--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Diffusion/diffusion.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Diffusion/diffusion.css
@@ -1,10 +1,21 @@
 
 /*content*/
 #diffusion-description {
+  width: 100%;
   max-width: 1080px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
+
+.container {
+  padding-bottom: 40px;
+}
+
+@media screen and (max-width: 960px) {
+  .container {
+    padding-bottom: 20px;
+  }
+}
+
 #diffusion-description p {
   text-align: justify;
   margin-bottom: 50px;
