--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
@@ -40,22 +40,26 @@ header {
     flex-wrap: nowrap;
     width: max-content;
     margin: 1vw;
-    font-size: 12px;
     color: white;
-}
-
-.fr-en:hover {
+    font-size: 13px;
     cursor: pointer;
 }
+
 
 .fr-en span {
     margin-left: 5px;
     margin-right: 5px;
     color: #e30613;
+    margin-top: 3px;
 }
 
+.fr-en p {
+    padding: 2px 3px;
+}
+.fr-en p:hover,
 .fr-en p.active-language {
     background-color: #e30613;
+    padding: 3px;
 }
 
 /* BOUTON HIGHLIGHT */
