[footer/header] css improvements

--- a/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
+++ b/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
@@ -130,3 +130,23 @@ div.overlay {
 h1, h2 {
   font-family: 'Rambla', 'Quicksand', Arial, sans-serif;
 }
+a.underlined {
+  position:relative;
+}
+
+a.underlined:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: -3px;
+  left: 0;
+  background-color: #ed1c24;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+  margin: 0 5%;
+}
+a.underlined:hover:before {
+  visibility: visible;
+  width: 90%;
+}
