--- a/FRONT/gatsby-sens-interdits/src/components/globals/Thumbnail/Index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/Thumbnail/Index.css
@@ -10,20 +10,32 @@
   position: relative;
   width: 200px;
   height: 200px;
-}
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
 
-.img-mini-tab {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
   border-radius: 0 0 20px 20px;
   border: solid black 1px;
 }
 
+.img-mini-tab {
+  align-self: center;
+  width: 100%;
+  height: 100%;
+  transition: all .4s ease-in-out;
+}
+
+.img-mini-tab:hover {
+  width: 115%;
+  height: 115%;
+  filter: blur(2px);
+}
+
 .title-mini-tab {
   position: absolute;
-  top: 0;
+  top: -1px;
   z-index: 1;
+  left: -1px;
 }
 
 .date-mini-tab {
