--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Sitemap/index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Sitemap/index.css
@@ -1,6 +1,7 @@
 .global-sitemap{
     width: 1080px;
     margin: auto;
+    padding-left : 10px;
 
 }
 
@@ -18,4 +19,11 @@
 
 .global-sitemap .sitemap-list h2 {
     font-size: 20px;
+}
+
+@media screen and (max-width: 960px){
+    .global-sitemap .sitemap-list{
+        flex-direction: column;
+        margin-left: 20px;
+    } 
 }
